--- a/templates/index.html
+++ b/templates/index.html
@@ -19,18 +19,17 @@
  	      <li role="presentation"><a href="/showSignUp">Sign Up</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Python Flask App</h3>
+        <h3 class="text-muted">Inventory App</h3>
       </div>
-
       <div class="jumbotron">
         <h1>Badge Barcode:</h1>
-          <form class="form-signin">
-          <label for="inputName" class="sr-only">Name</label>
-          <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
+          <form method="POST" action="/" class="form-signin">
+          <label for="inputBadge" class="sr-only">Name</label>
+          <input type="int" name="inputBadge" id="inputBadge" class="form-control" placeholder="Name" required autofocus>
           </form>
         <p class="lead"></p>
-        <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Sign in</a></p>
       </div>
+
 
       <footer class="footer">
         <p>&copy; DVT&C LLC 2017</p>
