--- a/templates/checkMEID.html
+++ b/templates/checkMEID.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
    <head>
@@ -16,16 +15,16 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
- 	      <li role="presentation"><a href="/showSignUp">Sign Up</a></li>
+ 	      <li role="presentation"><a href="/index.html">Change Badge</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Inventory App</h3>
       </div>
       <div class="jumbotron">
-        <h1>Badge Barcode:</h1>
+        <h1>Device MEID:</h1>
           <form method="POST" action="/" class="form-signin">
-          <label for="inputBadge" class="sr-only">Badge Barcode</label>
-          <input type="int" name="inputBadge" id="inputBadge" class="form-control" placeholder="Name" required autofocus>
+          <label for="inputMEID" class="sr-only">MEID barcode</label>
+          <input type="int" name="inputMEID" id="inputMEID" class="form-control" placeholder="Name" required autofocus>
           </form>
         <p class="lead"></p>
       </div>
