Alchemy and more templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         <h1>Badge Barcode:</h1>
           <form method="POST" action="/" class="form-signin">
           <label for="inputBadge" class="sr-only">Badge Barcode</label>
-          <input type="int" name="inputBadge" id="inputBadge" class="form-control" placeholder="Name" required autofocus>
+          <input type="int" name="inputBadge" id="inputBadge" class="form-control" placeholder="Badge Barcode" required autofocus>
           </form>
         <p class="lead"></p>
       </div>
