--- a/templates/create_person.html
+++ b/templates/create_person.html
@@ -11,7 +11,7 @@
   </head>
 </head>
 <body>
-<h1> Badge Login </h1>
+<h1> Create Person </h1>
     <div class="container">
       <div class="header">
         <nav>
@@ -25,17 +25,16 @@
       </div>
 
       <div class="jumbotron">
+        <h1>scan new user badge</h1>
           <form method="POST">
-            <h1>scan badge, hit enter</h1>
             {{ form.hidden_tag() }}
           <p>
               {% for option in form.answer %}
               {{ option }}  {{ option.label }}<br>
               {% endfor %}
           </p>
-              {{ form.submit }}
-          </form>
-
+        {{ form.submit }}
+        </form>
       </div>
 
 
