--- a/templates/idx.html
+++ b/templates/idx.html
@@ -25,14 +25,19 @@
       </div>
 
       <div class="jumbotron">
+          {% from "_formhelpers.html" import render_field %}
           <form method="POST">
               <p>
-            <h1>scan badge, hit enter</h1>
+            <h1>Badge</h1>
             {{ form.hidden_tag() }}
-              {{ form }}
-              {% for option in form.answer %}
-              {{ option }}  {{ option.label }}<br>
-              {% endfor %}
+             {% for field in form %}
+                <tr>
+                {% if field.label != "CSRF Token" %}
+                <td>{{ render_field(field) }}</td>
+                {% endif %}
+                </tr>
+            {% endfor %}
+
           </p>
               {{ form.submit }}
           </form>
