--- a/templates/checkMEID.html
+++ b/templates/checkMEID.html
@@ -10,31 +10,31 @@
   </head>
 
   <body>
-
+  <h1> Device In Hand </h1>
     <div class="container">
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
- 	      <li role="presentation"><a href="/index.html">Change Badge</a></li>
+            <li role="presentation" ><a href="showHome">Home</a></li>
+            <li role="presentation"><a href="active">Sign In</a></li>
+            <li role="presentation" class="active"><a href="#">Sign Up</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Inventory App</h3>
+        <h3 class="text-muted">device MEID</h3>
       </div>
+
       <div class="jumbotron">
-        <h1>Device MEID:</h1>
-          <form method="POST" action="/" class="form-signin">
-          <label for="inputMEID" class="sr-only">MEID barcode</label>
-          <input type="int" name="inputMEID" id="inputMEID" class="form-control" placeholder="Name" required autofocus>
 
-          </form>
-        <p class="lead"></p>
-      </div>
+          {% from "_formhelpers.html" import render_field %}
+          <form method="POST">
+              <p>
+            <h1>Badge</h1>
+            {{ form.hidden_tag() }}
+              <p>
+              {{ render_field(form.meid) }}
 
-      <footer class="footer">
-        <p>&copy; DVT&C LLC 2017</p>
-      </footer>
-
-    </div>
+              </p>
+        </form>
   </body>
 </html>
 
