--- a/templates/create_person.html
+++ b/templates/create_person.html
@@ -21,27 +21,20 @@
             <li role="presentation" class="active"><a href="#">Sign Up</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Badge Barcode</h3>
+        <h3 class="text-muted">New User</h3>
       </div>
 
       <div class="jumbotron">
-        <h1>New Person</h1>
+          {% from "_formhelpers.html" import render_field %}
           <form method="POST">
+              <p>
+            <h1>Make User</h1>
             {{ form.hidden_tag() }}
-          <p>
-            {% for field in form %}
-            <tr>
-            {% if field.type == "BooleanField" %}
-            <td></td>
-            <td>{{ field }} {{ field.label }}</td>
-            {% else %}
-            <td>{{ field.label }}</td>
-            <td>{{ field }}</td>
-            {% end %}
-    </tr>
-{% endfor %}
-          </p>
-        {{ form.submit }}
+              <p>
+              {{ render_field(form.badge_id) }}
+                  {{ render_field(form.name) }}
+                  {{ render_field(form.department) }}
+              </p>
         </form>
       </div>
 
