--- a/templates/create_person.html
+++ b/templates/create_person.html
@@ -16,9 +16,9 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="showHome">Home</a></li>
-            <li role="presentation"><a href="#">Sign In</a></li>
-            <li role="presentation" class="active"><a href="#">Sign Up</a></li>
+            <li role="presentation" ><a href="checkMEID.html">Home</a></li>
+            <li role="presentation"><a href="idx.html">Badge In</a></li>
+            <li role="presentation" class="active"><a href="create_person.html">New User</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">New User</h3>
@@ -31,9 +31,10 @@
             <h1>Make User</h1>
             {{ form.hidden_tag() }}
               <p>
-              {{ render_field(form.badge_id) }}
+                  {{ render_field(form.badge_id) }}
                   {{ render_field(form.name) }}
                   {{ render_field(form.department) }}
+                  {{ render_field(form.submit) }}
               </p>
         </form>
       </div>
